--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ body
 
 .btn
     {
-    float: left;	 
+    float: center;	 
     margin: 10px;
     width: 150px;
     height: 65px;
@@ -263,7 +263,7 @@ body
     width: 150px;
     height: 65px;
     background-color: #74bcf4;
-    border-radius: 50px;
+    border-radius: 5px;
     border: 1px solid #4e647e;
     }
 
