--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,7 @@ body
     margin: 10px;
     width: 150px;
     height: 65px;
+    text-align: center;
     background-color: #74bcf4;
     border-radius: 5px;
     border: 1px solid #4e647e;
