--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ h1, h2, h3
 /* ** Typography ** */
 p 
     {
-    margin: 22px 20px 0 20px;
+    margin: 50% 20px 0 20px;
     text-align:center;
     }
 
