--- a/css/style.css
+++ b/css/style.css
@@ -131,11 +131,11 @@ h1, h2, h3
 p 
     {
     margin: 0;
-    position: absolute; 
+    /*position: absolute; 
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    text-align:center;
+    */text-align:center;
     }
 
 p img 
