--- a/css/style.css
+++ b/css/style.css
@@ -131,8 +131,8 @@ h1, h2, h3
 p 
     {
     margin: 0;
-    position: absolute; /*
-    top: 50%;
+    position: absolute; 
+    top: 50%;/*
     left: 50%;
     margin-right: -50%;
     */text-align:center;
