--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ p
     {
     margin: 0;
     position: absolute; 
-    top: 50%;/*
+    margin-top: 50%;/*
     left: 50%;
     margin-right: -50%;
     */text-align:center;
