--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,13 @@ p
     */text-align:center;
     }
 
+pp
+   {
+   margin: 0;
+   position: absolute;
+   margin-top: 20px;
+   }
+
 p img 
     {
     margin: 0;
