--- a/css/style.css
+++ b/css/style.css
@@ -142,8 +142,8 @@ pp
    {
    margin: 0;
    position: absolute;
-   margin-top: 20%;
-   margin-left: 20%;
+   margin-top: 75px;
+   margin-left: 75px;
    }
 
 p img 
