--- a/css/style.css
+++ b/css/style.css
@@ -132,8 +132,8 @@ p
     {
     margin: 0;
     position: absolute; 
-    margin-top: 5%;/*
-    left: 50%;
+    margin-top: 5%;
+    left: 5%;/*
     margin-right: -50%;
     */text-align:center;
     }
