--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ p
     margin: 0;
     position: absolute; 
     margin-top: 5%;
-    margin-left: 30px;/*
+    margin-left: .btn.width/2;/*
     margin-right: -50%;
     */text-align:center;
     }
