--- a/css/style.css
+++ b/css/style.css
@@ -267,6 +267,9 @@ body
     background-color: #74bcf4;
     border-radius: 5px;
     border: 1px solid #4e647e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     }
 
 .btn_sq
@@ -278,6 +281,9 @@ body
     background-color: #74bcf4;
     border-radius: 5px;
     border: 1px solid #4e647e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     }
 
 .btn_sq_offset
@@ -289,6 +295,9 @@ body
     background-color: #74bcf4;
     border-radius: 5px;
     border: 1px solid #4e647e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     }
 
 .btn_rctgl
@@ -300,6 +309,9 @@ body
     background-color: #74bcf4;
     border-radius: 5px;
     border: 1px solid #4e647e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     }
 
 
