--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,10 @@ body
 	 
     background-color: #4e647a;
     border: 1px solid #4e647e;
+	    
+    display: flex;
+    align-items: center;
+    justify-content: center;
     }
 
 #bkgrd_dk_b 
@@ -388,4 +392,5 @@ input.search-box
     transition: .5s;
     text-transform: uppercase;
     text-align:left;
+    margin: 0;
     }
