--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ input.search-box
     display: inline-block;
     text-decoration: none;
     font-size: 14px;
-    font-weight; 300;
+    font-weight: 300;
     font-family: inherit;
     color: #dee8f7;
     line-height: normal;
