--- a/css/style.css
+++ b/css/style.css
@@ -382,10 +382,11 @@ input.search-box
     border: none;
     background-color: #74bcf4;
     display: inline-block;
+    font: 14px 'Open Sans', sans-serif;
     text-decoration: none;
-    font-size: 14px;
+    /*font-size: 14px;*/
     font-weight: 300;
-    font-family: inherit;
+    /*font-family: inherit;*/
     color: #dee8f7;
     line-height: normal;
     cursor: pointer;
