--- a/css/style.css
+++ b/css/style.css
@@ -382,11 +382,10 @@ input.search-box
     border: none;
     background-color: #74bcf4;
     display: inline-block;
-    font: 14px 'Open Sans', sans-serif;
     text-decoration: none;
-    /*font-size: 14px;*/
+    font-size: 14px;
     font-weight: 300;
-    /*font-family: inherit;*/
+    font-family: inherit;
     color: #dee8f7;
     line-height: normal;
     cursor: pointer;
@@ -394,6 +393,6 @@ input.search-box
     transition: .5s;
     text-transform: uppercase;
     text-align:left;
-    margin: 0;
+    margin: 50%;
     
     }
