--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,6 @@ input.search-box
     transition: .5s;
     text-transform: uppercase;
     text-align:left;
-    margin: 50%;
+    margin: 20;
     
     }
