--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,6 @@ input.search-box
     transition: .5s;
     text-transform: uppercase;
     text-align:left;
-    margin: 20;
+    margin: 20px;
     
     }
