--- a/css/style.css
+++ b/css/style.css
@@ -401,6 +401,6 @@ input.search-box
     transition: .5s;
     text-transform: uppercase;
     text-align:left;
-    margin: 0;
+    margin: 20px;
     
     }
