--- a/css/style.css
+++ b/css/style.css
@@ -401,5 +401,5 @@ input.search-box
     text-transform: uppercase;
     text-align:left;
     margin: 20px;
-    
+    vertical-align: 50px;
     }
