--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,9 @@ img
     {
     border-radius: 50%;   
     margin: 0;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
     }
 
 body
