--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,7 @@ img
     margin: 0;
     position: relative;
     top: 50%;
+    left: 50%;
     transform: translateY(-50%);
     transform: translateX(50%);
     }
