--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ table
 h1, h2, h3, h4, h5, h6 
     {	
     margin: 0;
-    color: #dee8fy;
+    color: #dee8f7;
     font-weight: 300;
     -webkit-font-smoothing: antialiased;
     margin-bottom: 10px;
