--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ img
     {
     border-radius: 50%;   
     margin: 0;
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 45%;
     transform: translateY(-50%);
