--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ ul, li, fieldset, form, label, legend,
 table, caption, tbody, tfoot,
 thead, tr, th, td, article, aside, canvas,
 details, embed, figure, figcaption, footer,
-main,
 header, hgroup, menu, nav, output, ruby,
 section, summary, time, mark, audio, video 
     {
@@ -23,7 +22,7 @@ section, summary, time, mark, audio, video
     vertical-align: baseline;
     }
 
-article, aside, details, figcaption, figure, footer, main, header, hgroup, menu, nav, section 
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section 
     {
     display: block;
     }
@@ -329,12 +328,6 @@ body
     align-items: center;
     justify-content: center;
     }
-
-#main{
-    top: 0;
-    left: 365;
-    width: 1555px;
-}
 
 #footer {
     bottom: 0;
