--- a/css/style.css
+++ b/css/style.css
@@ -12,397 +12,169 @@ table, caption, tbody, tfoot,
 thead, tr, th, td, article, aside, canvas,
 details, embed, figure, figcaption, footer,
 header, hgroup, menu, nav, output, ruby,
-section, summary, time, mark, audio, video 
-    {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    font-size: 100%;
-    vertical-align: baseline;
-    }
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section 
-    {
-    display: block;
-    }
-
-ol,
-ul 
-    {
-    list-style: none;
-    }
-
-blockquote, q 
-    {
-    quotes: none;
-    }
-
-blockquote:before, blockquote:after,
-q:before, q:after 
-    {
-    content: '';
-    content: none;
-    }
-
-table 
-    {
-    border-collapse: collapse;
-    border-spacing: 0;
-    }
-
-*,
-*:before,
-*:after 
-    {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    }
+section, summary, time, mark, audio, video
+{
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
 
 
-
-/* ** Headings ** */
-h1, h2, h3, h4, h5, h6 
-    {	
-    margin: 0;
-    color: #dee8f7;
-    font-weight: 300;
-    -webkit-font-smoothing: antialiased;
-    margin-bottom: 10px;
-    letter-spacing: 1.1px;
-    text-align:center;
-    }
-
-h1 a, h2 a, h3 a, h4 a, h5 a, h6 a 
-    { 
-    font-weight: inherit; 
-    }
-
-h1 
-    {
-    font-size: 38px; 
-    line-height: 1.2; 
-    }
-
-h2 
-    {
-    font-size: 34px; 
-    line-height: 1.2; 
-    }
-
-h3 
-    {
-    font-size: 28px; 
-    line-height: 1.2; 
-    }
-
-h4 
-    { 
-    font-size: 18px; 
-    line-height: 1.3; 
-    }
-
-h5 
-    { 
-    font-size: 17px; 
-    line-height: 1.4; 
-    }
-
-h6 
-    { 
-    font-size: 14px; 
-    line-height: 1.5; 
-    text-transform: uppercase;
-    }
-
-h1, h2, h3 
-    {
-    margin-bottom: 20px;
-    }
-
-.subheader 
-    {
-    color: #aaa;
-    }
-
-
-
-/* ** Typography ** */
-p 
-    {
-    margin: 0;
-    }
-
-p img 
-    {
-    margin: 0;
-    }
-
-p.lead 
-    {
-    font-size: 21px;
-    line-height: 27px;
-    color: #aaa;
-    }
-
-img
-    {
-    border-radius: 50%;   
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 45%;
-    transform: translateY(-50%);
-    }
 
 body
-    {
-    font: 14px 'Open Sans', sans-serif;
+{
+  font: 14px 'Open Sans', sans-serif;
+  color: #dee8f7;
+  background-color: #2a333c;
+  min-width: 1336px;
+}
+
+header
+{
+  height: 3.4em;
+  background-color: #4e647a;
+}
+
+header #user-msg
+{
+  margin: 1em;
+  display: inline-block;
+  font-size: 1.2em;
+}
+header #user-img
+{
+  height: 100%;
+  float: left;
+}
+
+header #logout-button
+{
+  float: right;
+}
+
+#sidebar
+{
+  display: inline-block;
+  float: left;
+  width: 400px;
+  border-right: 1px solid #4e647e;
+}
+
+#search-box
+{
+  margin: 2.5%;
+  background-color: #4e647a;
+  border-radius: 10px;
+  padding: 2.5%;
+}
+
+input[type=text] {
+    width: 78%;
+    border: 2px solid #2a333c;
+    border-radius: 5px;
+    font-size: 1.3em;
     color: #dee8f7;
-    font-weight: 300;
-    background-color: #2a333c;
-    }
-
-#header 
-    {
-    top: 0;
-    left: 0;
-    z-index: 10;
-    width: 365px;
-    min-height: 100%;
-    background-color: #2a333c;
-    border: none;
-    border-right: 1px solid #4e647e;
-    }
-
-
-
-#bkgrd_dk_a 
-
-    { 
-	 
-    left: 0px; 
-	 
-    top: 0; 
-	    	 
-    position: relative; 
-
-    margin-left: auto; 
-	 
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 10px; 
-	 
-    width: 345px;
-	 
-    min-height: 135px;
-    border-radius: 10px; 
-	 
-    background-color: #4e647a;
-    border: 1px solid #4e647e;
-	    
-    /*display: flex;
-    align-items: center;
-    justify-content: center;*/
-	    
-    
-    }
-
-#bkgrd_dk_b 
-
-    { 
-	 
-    left: 0px; 
-	 
-    top: 0px; 
-	 
-    position: relative; 
-
-    margin-left: auto; 
-	 
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 10px; 
-	 
-    width: 345px;
-	 
-    min-height: 485px;
-    border-radius: 10px; 
-	 
-    background-color: #4e647a;
-    border: 1px solid #4e647e;
-    }
-
-#bkgrd_dk_c 
-
-    { 
-	 
-    left: 0px; 
-	 
-    top: 0px; 
-	 
-    position: relative; 
-
-    margin-left: auto; 
-	 
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 10px; 
-	 
-    width: 345px;
-	 
-    min-height: 515px;
-    border-radius: 10px; 
-	 
-    background-color: #4e647a;
-    border: 1px solid #4e647e;
-    }
-
-.btn
-    {
-    float: left;	 
-    margin: 10px;
-    width: 150px;
-    height: 65px;
-    background-color: #74bcf4;
-    border-radius: 5px;
-    border: 1px solid #4e647e;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    }
-
-.btn_offset
-    {
-    float: left;	 
-    margin: 10px;
-    width: 150px;
-    height: 65px;
-    background-color: #74bcf4;
-    border-radius: 5px;
-    border: 1px solid #4e647e;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    }
-
-.btn_sq
-    {
-    float: left;	 
-    margin: 10px;
-    width: 150px;
-    height: 150px;
-    background-color: #74bcf4;
-    border-radius: 5px;
-    border: 1px solid #4e647e;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    }
-
-.btn_sq_offset
-    {
-    float: left;	 
-    margin: 10px;
-    width: 150px;
-    height: 150px;
-    background-color: #74bcf4;
-    border-radius: 5px;
-    border: 1px solid #4e647e;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    }
-
-.btn_rctgl
-    {
-    float: left;	 
-    margin: 10px;
-    width: 325px;
-    height: 150px;
-    background-color: #74bcf4;
-    border-radius: 5px;
-    border: 1px solid #4e647e;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    }
-
-#footer {
-    bottom: 0;
-    left: 365px;
-    z-index: 10;
-    width: 1555px;
-    min-height: 165px;
-    background-color: #2a333c;
-    border-top: 1px solid #4e647e;
-    float: right;
-    position: fixed;
+    background-color: inherit;
+    background-image: url('searchicon.png');
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+}
+input::placeholder
+{
+  color: #dee8f7;
 }
 
-
-.search 
-    {
-
-    position: relative;
-
-    margin-bottom: 40px;
-
-    max-width: 220px;
-
-    }
-
-
-
-input.search-box 
-    {
-    
-    margin-bottom: 20px;
-    
+#preset-box
+{
+  margin: 2.5%;
+  background-color: #4e647a;
+  border-radius: 10px;
+  padding: 2.5%;
 }
 
+#playlist-box
+{
+  height: 50vh;
+  margin: 2.5%;
+  background-color: #4e647a;
+  border-radius: 10px;
+  padding: 2.5%;
+}
 
+ul
+{
+  list-style: none;
+  display: inline-block;
+}
+.preset-btn
+{
+  float: left;
+  width: 45%;
+  background-color: #74bcf4;
+  border-radius: 5px;
+  font-size: 1.3em;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 2.5%;
+  padding: 0.5em 0 0.5em 0;
+}
 
-.search-btn 
-    {
-    
-    background: #4e647a;
-    
-    border: none;
-    
-    box-shadow: none;
-    
-    margin: 0;
-    
-    position: absolute;
-    
-    padding: 0;
-    
-    padding: 8px 12px 9px;
-    
-    right: 0;
-    
-    border-radius: 0;
-    
+#content
+{
+  display: inline-block;
+  margin: 10px;
+  background-color: #4e647a;
+  border-radius: 10px;
+
+}
+
+table
+{
+  width: 900px;
+  font-size: 1.2em;
+}
+
+.tbl-add
+{
+  width: 10%;
+}
+
+.tbl-name
+{
+  width: 30%;
+}
+
+.tbl-artist
+{
+  width: 40%;
+}
+
+.tbl-popularity
+{
+  width: 20%;
+}
+
+footer
+{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #000;
 }
 
 .button, button, input[type='submit'], input[type='reset'], input[type='button']
-    {
-    border: 2px solid;
-    border-radius: 25px;
-    background-color: #74bcf4;
-    display: inline-block;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 300;
-    font-family: inherit;
-    color: #dee8f7;
-    line-height: normal;
-    cursor: pointer;
-    outline: none;
-    transition: .5s;
-    text-transform: uppercase;
-    text-align:left;
-    margin: 20px;
-    }
+{
+  font-size: 1.1em;
+  color: #dee8f7;
+  margin: 0.5em;
+  padding: 0.5em;
+  border: none;
+  border-radius: 100px;
+  background-color: #74bcf4;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+}
