--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,19 @@ footer
   background-color: #000;
 }
 
+#getInTouch{
+  float: left;
+  margin-top: 20px;
+  margin-left: 15%;
+}
+
+#aboutUs{
+  float: left;
+  margin-top: 20px;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
 .button, button, input[type='submit'], input[type='reset'], input[type='button']
 {
   font-size: 1.1em;
