--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ input::placeholder
 
 #playlist-box
 {
-  height: 100%;
+  height: 50vh;
   margin: 2.5%;
   background-color: #4e647a;
   border-radius: 10px;
