--- a/css/style.css
+++ b/css/style.css
@@ -215,11 +215,11 @@ footer
 
 #login-page{
   text-align: center;
-  margin-top: 40vh;
+  margin-top: 20vh;
 }
 
 #logo{
   margin-top: 20vh;
-  width: 10vh;
-  height: 10vh;
+  width: 10px;
+  height: 10px;
 }
