--- a/css/style.css
+++ b/css/style.css
@@ -214,12 +214,14 @@ footer
 }
 
 #login-page{
+  display:inline-block;
+  width:auto;
   text-align: center;
   margin-top: 20vh;
 }
 
 #logo{
   margin-top: 20vh;
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 400px;
 }
