--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,7 @@ footer
 
 #logo{
   margin-top: 5vh;
-  width: 400px;
-  height: 400px;
+  margin-bottom: 50px;
+  width: 350px;
+  height: 350px;
 }
