--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ footer
   margin-right: 5%;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 700px) and (max-height: 1000px) {
    #Footer {
         width: 100%;
     }
