--- a/css/style.css
+++ b/css/style.css
@@ -158,47 +158,6 @@ table
   width: 20%;
 }
 
-footer
-{
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1rem;
-  background-color: #4e647a;
-}
-
-#getInTouch{
-  float: left;
-  margin-top: 20px;
-  margin-left: 25%;
-}
-
-#aboutUs{
-  float: left;
-  margin-top: 20px;
-  margin-left: 5%;
-  margin-right: 5%;
-}
-
-@media only screen and (max-width: 700px) and (max-height: 1000px) {
-   #Footer {
-        width: 100%;
-    }
-
-    #Footer.push {
-        bottom: 0;
-    }
-
-    #aboutUs, #getInTouch {
-        font-size: 80%;
-        width: 20%;
-        height: 20%;
-        margin-left: 1%;
-        margin-right: 1%;
-    }
-}
-
 .button, button, input[type='submit'], input[type='reset'], input[type='button']
 {
   font-size: 1.1em;
@@ -225,4 +184,47 @@ footer
   margin-bottom: 35px;
   width: 350px;
   height: 350px;
+}
+
+footer
+{
+  text-align: center;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #4e647a;
+}
+
+#getInTouch{
+  float: left;
+  margin-top: 20px;
+  margin-left: 25%;
+}
+
+#aboutUs{
+  float: left;
+  margin-top: 20px;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+@media only screen and (max-width: 700px) or (max-height: 1000px) {
+   #Footer {
+        width: 100%;
+        height: 50%;
+    }
+
+    #Footer.push {
+        bottom: 0;
+    }
+
+    #aboutUs, #getInTouch {
+        font-size: 80%;
+        width: 20%;
+        height: 20%;
+        margin-left: 1%;
+        margin-right: 1%;
+    }
 }
