--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ table
 }
 
 #login-page{
+  position:fixed;
   width:auto;
   text-align: center;
   margin-top: 20vh;
@@ -209,7 +210,7 @@ footer
   margin-right: 5%;
 }
 
-@media only screen and (max-width: 700px) or (max-height: 1000px) {
+/*@media only screen and (max-width: 700px) or (max-height: 1000px) {
    #Footer {
         width: 100%;
         height: 50%;
@@ -226,4 +227,4 @@ footer
         margin-left: 1%;
         margin-right: 1%;
     }
-}
+}*/
