--- a/css/style.css
+++ b/css/style.css
@@ -173,10 +173,11 @@ table
 }
 
 #login-page{
-  width:auto;
-  text-align: center;
-  margin-top: 20vh;
-  min-height: 800px;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  
 }
 
 #logo{
