--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ footer
   margin-right: 5%;
 }
 
-/*@media only screen and (max-width: 700px) or (max-height: 1000px) {
+@media only screen and (max-width: 700px) or (max-height: 1000px) {
    #Footer {
         width: 100%;
         height: 50%;
@@ -224,4 +224,4 @@ footer
         margin-left: 1%;
         margin-right: 1%;
     }
-}*/
+}
