--- a/css/style.css
+++ b/css/style.css
@@ -207,10 +207,9 @@ footer
   margin-right: 5%;
 }
 
-@media only screen and (max-width: 700px) or (max-height: 1000px) {
+@media only screen and (max-width: 700px) {
    #Footer {
         width: 100%;
-        height: 50%;
     }
 
     #Footer.push {
