--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ footer
         bottom: 0;
     }
 
-    #aboutUs, #getInTouch {
+    #aboutUs, #getInTouch, #socialMedia {
         font-size: 80%;
         width: 20%;
         height: 20%;
