--- a/css/style.css
+++ b/css/style.css
@@ -197,21 +197,20 @@ footer
 #getInTouch{
   float: left;
   margin-top: 20px;
-  margin-left: 30%;
+  margin-left: 10%;
 }
 
 #aboutUs{
   float: left;
   margin-top: 20px;
   margin-left: 5%;
-  margin-right: 5%;
 }
 
 #socialMedia{
-  float: right;
+  float: left;
   margin-top: 20px;
   margin-left: 5%;
-  margin-right: 5%;
+  margin-right: 10%;
 }
 
 @media only screen and (max-width: 900px) {
