--- a/css/style.css
+++ b/css/style.css
@@ -199,12 +199,14 @@ footer
   float: left;
   margin-top: 20px;
   margin-left: 10%;
+  width: 33%;
 }
 
 #aboutUs{
   float: left;
   margin-top: 20px;
   margin-left: 5%;
+  width: 33%;
 }
 
 #socialMedia{
@@ -212,6 +214,7 @@ footer
   margin-top: 20px;
   margin-left: 5%;
   margin-right: 10%;
+  width: 33%;
 }
 
 @media only screen and (max-width: 900px) {
