--- a/css/style.css
+++ b/css/style.css
@@ -227,8 +227,8 @@ table img
 /****LOGIN-PAGE CSS****/
 
 #login-page{
-  text-align: center;
-  margin-top: 20vh;
+  display: flex;
+  height: 300px;
 }
 
 #logo{
@@ -236,6 +236,7 @@ table img
   margin-bottom: 35px;
   width: 402.4px;
   height: 360.4px;
+  margin: auto;
 }
 
 footer
