--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ footer
 
 @media only screen and (max-width: 900px) {
   
-   #logo, #login-button{
+   #logo{
         width:50%;
         height:50%;
         padding: 20vh;
