--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,6 @@ body
   padding-bottom: 10px;
   height: 100vh;
   overflow: hidden;
-
-  scrollbar-face-color: $foreground-color;
-  scrollbar-track-color: $background-color;
 }
 
 header
@@ -102,20 +99,24 @@ input::placeholder
   padding: 2.5%;
   overflow-y: scroll;
   height: 59vh;
+
+  scrollbar-face-color: rgba(255, 255, 255, 0.1);
+  scrollbar-track-color: #4e647a;
 }
 
 #playlist-box::-webkit-scrollbar {
-     width:  $size;
-     height: $size;
- }
+  border-radius: 100%;
+}
 
- #playlist-box::-webkit-scrollbar-thumb {
-     background: $foreground-color;
- }
+#playlist-box::-webkit-scrollbar-thumb {
+  border-radius: 100%;
+  background: rgba(255, 255, 255, 0.1);
+}
 
- #playlist-box::-webkit-scrollbar-track {
-     background: $background-color;
- }
+#playlist-box::-webkit-scrollbar-track {
+  border-radius: 100%;
+  background: #4e647a;
+}
 
 #playlist-box table
 {
@@ -283,7 +284,7 @@ footer
 }
 
 @media only screen and (max-width: 900px) {
-  
+
    #logo{
         width:50%;
         height:50%;
