--- a/css/style.css
+++ b/css/style.css
@@ -105,16 +105,16 @@ input::placeholder
 }
 
 #playlist-box::-webkit-scrollbar {
-  border-radius: 10%;
+  border-radius: 100px;
 }
 
 #playlist-box::-webkit-scrollbar-thumb {
-  border-radius: 10%;
+  border-radius: 100px;
   background: rgba(255, 255, 255, 0.1);
 }
 
 #playlist-box::-webkit-scrollbar-track {
-  border-radius: 10%;
+  border-radius: 100px;
   background: #4e647a;
 }
 
