--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ input::placeholder
 }
 
 #playlist-box::-webkit-scrollbar {
-  border-radius: 100spx;
+  border-radius: 100px;
 }
 
 #playlist-box::-webkit-scrollbar-thumb {
