--- a/css/style.css
+++ b/css/style.css
@@ -224,8 +224,21 @@ table img
 
 .black-row
 {
-  background-color: rgba(0, 0, 0, 0.5);;
+  background-color: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
+  .black-row:hover
+  {
+    background-color: rgba(255, 255, 255, 0.25);
+  }
+
+.white-row
+{
+  cursor: pointer;
+}
+  .white-row:hover{
+    background-color: rgba(255, 255, 255, 0.25);
+  }
 
 .button, button, input[type='submit'], input[type='reset'], input[type='button']
 {
