--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ footer
   width: 33%;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 900px) and (max-height: 900px) {
 
    #logo{
         width:50%;
