--- a/css/style.css
+++ b/css/style.css
@@ -296,9 +296,31 @@ footer
   width: 33%;
 }
 
-@media only screen and (max-width: 900px) and (max-height: 900px) {
+@media only screen and (max-width: 900px) {
 
    #logo{
+        width:50%;
+        height:50%;
+   }
+   #Footer {
+        width: 100%;
+    }
+
+    #Footer.push {
+        bottom: 0;
+    }
+
+    #aboutUs, #getInTouch, #socialMedia {
+        font-size: 80%;
+        width: 20%;
+        height: 20%;
+        margin-left: 5%;
+    }
+}
+
+@media only screen and (max-height: 900px) {
+  
+  #logo{
         width:50%;
         height:50%;
    }
