--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ footer
     }
 }
 
-@media only screen and (max-height: 700px) {
+@media all and (max-height: 700px) {
   
   #logo{
         width: 10%;
