--- a/css/style.css
+++ b/css/style.css
@@ -327,8 +327,48 @@ footer
         margin-left: 5%;
     }
 
-    #sidebar{
-      display: none;
+      #slideout {
+    position: fixed;
+
+    top: 0px;
+    height: 10px;
+    left: 0px;
+    right: 0px;
+
+    background-color: yellow;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-duration: 0.3s;
+}
+
+#slideout:hover {
+    top: 50px;
+    background-color: cyan;
+}
+
+#slideout_inner {
+    position: fixed;
+
+    top: -50px;
+    height: 50px;
+    left: 0px;
+    right: 0px;
+
+    background-color: red;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+
+#slideout:hover #slideout_inner {
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    background-color: magenta;
+}
     }
 }
 
