--- a/css/style.css
+++ b/css/style.css
@@ -205,29 +205,36 @@ table img
 .tbl-add
 {
   width: 10%;
+  cursor: pointer;
+
 }
   .tbl-add:hover
   {
     text-decoration: underline;
+    cursor: pointer;
   }
   .tbl-play:hover
   {
     text-decoration: underline;
+    cursor: pointer;
   }
 
 .tbl-name
 {
   width: 40%;
+  cursor: pointer;
 }
 
 .tbl-artist
 {
   width: 20%;
+  cursor: pointer;
 }
 
 .tbl-popularity
 {
   width: 20%;
+  cursor: pointer;
 }
 
 .black-row
@@ -327,50 +334,9 @@ footer
         margin-left: 5%;
     }
 
-      #slideout {
-    position: fixed;
-
-    top: 0px;
-    height: 10px;
-    left: 0px;
-    right: 0px;
-
-    background-color: yellow;
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-duration: 0.3s;
-}
-
-#slideout:hover {
-    top: 50px;
-    background-color: cyan;
-}
-
-#slideout_inner {
-    position: fixed;
-
-    top: -50px;
-    height: 50px;
-    left: 0px;
-    right: 0px;
-
-    background-color: red;
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-}
-
-#slideout:hover #slideout_inner {
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    background-color: magenta;
-}
+    #sidebar{
+      
     }
-}
 
 @media all and (max-height: 700px) {
 
